evidently webpack sass processing requires a space after colon !?

--- a/salvus/smc-webapp/_editor.sass
+++ b/salvus/smc-webapp/_editor.sass
@@ -336,7 +336,8 @@
   margin-bottom: -2ex
   padding-left: 1ex
   min-height: 1.1em
-  overflow-y: auto    // for big image output and since mathjax doesn't wrap around properly yet (?)
+  overflow-x: auto    // for big image output and since mathjax doesn't wrap around properly yet (?)
+  overflow-y: hidden
   max-width: 97%
 
 .sagews-output-edit-button-group
