--- a/src/smc-webapp/index.sass
+++ b/src/smc-webapp/index.sass
@@ -4,6 +4,8 @@
   font-weight: normal
   src: local("Droid Sans Mono"), local("DroidSansMono"), url('/static/fonts/droid/DroidSansMono.ttf') format("truetype")
 
+@import url(https://fonts.googleapis.com/css?family=Roboto+Mono);
+
 =user-select($val:"none")
   -webkit-user-select: #{$val};
   -moz-user-select: #{$val};
@@ -242,8 +244,8 @@ ul.nav.pull-right.navbar-nav li
   transition         : transform .1s ease-in
 
   &:hover
-    -webkit-transform : scale(1.2)
-    -moz-transform    : scale(1.2)
-    -ms-transform     : scale(1.2)
-    -o-transform      : scale(1.2)
-    transform         : scale(1.2)
+    -webkit-transform : scale(1.4)
+    -moz-transform    : scale(1.4)
+    -ms-transform     : scale(1.4)
+    -o-transform      : scale(1.4)
+    transform         : scale(1.4)
