--- a/src/smc-webapp/index.sass
+++ b/src/smc-webapp/index.sass
@@ -93,6 +93,13 @@ body
     position: relative !important
     top: 0px !important
 
+.help-smc-logo
+  width:  100px
+  height: 100px
+  @media (max-width: 767px)
+    width:  50px
+    height: 50px
+
 /* so on iOS scroll-into-view modals work */
 @media (max-width: 480px)
   .modal.fade.in
